# mpsify

./: LICENSE  README.md  demo-short.tape  demo.tape  pyproject.toml
docs/: index.html  robots.txt  sitemap.xml
examples/: demo.py
mpsify/: __init__.py  __main__.py  _doctor.py  _report.py
tests/: test_realworld.py  test_shim.py
