[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mpsify"
version = "0.2.0"
description = "Run CUDA-hardcoded PyTorch repos on Apple Silicon (MPS) with zero source edits."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Abhyudaya Vasisht", email = "abhyudaya2005@gmail.com" }]
keywords = ["pytorch", "mps", "apple-silicon", "cuda", "metal", "deep-learning"]
dependencies = ["torch>=1.12"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: GPU",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/rgabhi2526/mpsify"
Repository = "https://github.com/rgabhi2526/mpsify"
Issues = "https://github.com/rgabhi2526/mpsify/issues"

[project.scripts]
mpsify = "mpsify.__main__:main"

[tool.setuptools]
packages = ["mpsify"]
